[gd_scene load_steps=15 format=3 uid="uid://7xvfxcypiid7"]

[ext_resource type="Script" uid="uid://dbdomgjd0mftw" path="res://script/hostile/geppetto/gepetto.gd" id="1_iapjk"]
[ext_resource type="Script" uid="uid://cnxvknb5bqxce" path="res://script/components/stats.gd" id="1_ptpkp"]
[ext_resource type="PackedScene" uid="uid://bopshekyxove8" path="res://scene/hostile/broken_puppet.tscn" id="2_s1n0h"]
[ext_resource type="PackedScene" uid="uid://0x16bvdxe50c" path="res://scene/hostile/geppetto/geppetto_scissors.tscn" id="3_o1mhc"]
[ext_resource type="Texture2D" uid="uid://bg03qyy06fgbo" path="res://icon.svg" id="3_plffo"]
[ext_resource type="Script" uid="uid://cf1nrc451ad8p" path="res://script/components/boss_hurtbox.gd" id="3_w6ka3"]
[ext_resource type="Script" uid="uid://bdec50ymu4lsw" path="res://script/hostile/geppetto/hammer_indicator.gd" id="6_rquf0"]
[ext_resource type="Texture2D" uid="uid://cp511vlvuylir" path="res://assets/temp/White-Circle-PNG.png" id="8_fuaoe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iapjk"]
size = Vector2(40, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plffo"]
size = Vector2(52, 54)

[sub_resource type="Animation" id="Animation_hfhxk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox/Circle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/Circle/CircleTimer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.039129253, 0.039129253)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/Circle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rkmeh"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox/Circle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_732fb"]
resource_name = "shrink_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox/Circle/CircleTimer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.024, 0.024), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/Circle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/Circle:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pisg7"]
_data = {
&"RESET": SubResource("Animation_hfhxk"),
&"fade_out": SubResource("Animation_rkmeh"),
&"shrink_in": SubResource("Animation_732fb")
}

[node name="Geppetto" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_iapjk")
puppet_scene = ExtResource("2_s1n0h")
scissor_scene = ExtResource("3_o1mhc")

[node name="HammerIndicator" type="Polygon2D" parent="."]
visible = false
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(128, 0, 126.904945, 8.353676, 123.638504, 16.564419, 118.25658, 24.49174, 110.85125, 32, 101.549225, 38.96073, 90.50967, 45.254833, 77.92146, 50.774612, 64, 55.425625, 48.98348, 59.12829, 33.128838, 61.819252, 16.707352, 63.452473, 7.837481e-15, 64, -16.707352, 63.452473, -33.128838, 61.819252, -48.98348, 59.12829, -64, 55.425625, -77.92146, 50.774612, -90.50967, 45.254833, -101.549225, 38.96073, -110.85125, 32, -118.25658, 24.49174, -123.638504, 16.564419, -126.904945, 8.353676, -128, 7.837481e-15, -126.904945, -8.353676, -123.638504, -16.564419, -118.25658, -24.49174, -110.85125, -32, -101.549225, -38.96073, -90.50967, -45.254833, -77.92146, -50.774612, -64, -55.425625, -48.98348, -59.12829, -33.128838, -61.819252, -16.707352, -63.452473, -2.3512442e-14, -64, 16.707352, -63.452473, 33.128838, -61.819252, 48.98348, -59.12829, 64, -55.425625, 77.92146, -50.774612, 90.50967, -45.254833, 101.549225, -38.96073, 110.85125, -32, 118.25658, -24.49174, 123.638504, -16.564419, 126.904945, -8.353676)
script = ExtResource("6_rquf0")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(3.5762787e-07, -0.49999857)
scale = Vector2(0.390625, 0.39843747)
texture = ExtResource("3_plffo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_iapjk")

[node name="Stats" type="Node2D" parent="." node_paths=PackedStringArray("health_bar")]
script = ExtResource("1_ptpkp")
max_health = 1000.0
base_damage = 25.0
health_bar = NodePath("../HealthBar")
metadata/_custom_type_script = "uid://cnxvknb5bqxce"

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("3_w6ka3")
metadata/_custom_type_script = "uid://dtffxjfmsjwuw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_plffo")

[node name="Circle" type="Node2D" parent="Hurtbox"]
visible = false
z_index = 3
scale = Vector2(0.9999999, 0.9999999)

[node name="CircleAnimation" type="AnimationPlayer" parent="Hurtbox/Circle"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_pisg7")
}

[node name="CircleTimer" type="Sprite2D" parent="Hurtbox/Circle"]
position = Vector2(4.768372e-07, -9.536744e-07)
rotation = -3.1415925
scale = Vector2(0.039129253, 0.039129253)
texture = ExtResource("8_fuaoe")

[node name="Reference" type="Sprite2D" parent="Hurtbox/Circle"]
position = Vector2(4.768372e-07, -9.536744e-07)
rotation = -3.1415925
scale = Vector2(0.0071148607, 0.0071148607)
texture = ExtResource("8_fuaoe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="AttackIntervalTimer" type="Timer" parent="."]
one_shot = true

[node name="NavAgent" type="NavigationAgent2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0

[node name="DamageNumberOrigin" type="Node2D" parent="."]
position = Vector2(0, -27)
